@@ -14,6 +14,8 @@ sed -i -e "s/MARIADB_PORT/${MARIADB_PORT}/g" /localconfig/localconfig.xml
 sed -i -e "s/SERVER_HOSTNAME/${HOSTNAME}/g" /localconfig/localconfig.xml
 sed -i -e "s#CARBONIO_FILES_SERVICE_URL#${CARBONIO_FILES_SERVICE_URL}#g" /localconfig/localconfig.xml
 sed -i -e "s#CARBONIO_PREVIEW_SERVICE_URL#${CARBONIO_PREVIEW_SERVICE_URL}#g" /localconfig/localconfig.xml
+sed -i -e "s#CARBONIO_MAILBOX_INTERNAL_API_HOST#${CARBONIO_MAILBOX_INTERNAL_API_HOST}#g" /localconfig/localconfig.xml
+sed -i -e "s#CARBONIO_MAILBOX_INTERNAL_API_PORT#${CARBONIO_MAILBOX_INTERNAL_API_PORT}#g" /localconfig/localconfig.xml
 
 SERVER_EXISTS=$(/usr/bin/zmprov -l gs "${HOSTNAME}" 2>&1)
 if [[ $SERVER_EXISTS == *"account.NO_SUCH_SERVER"* ]]; then
@@ -32,11 +34,10 @@ JAVA_OPTS="-Dfile.encoding=UTF-8 -server \
                          -XX:+UseG1GC -XX:SoftRefLRUPolicyMSPerMB=1 -XX:+UnlockExperimentalVMOptions \
                          -XX:G1NewSizePercent=15 -XX:G1MaxNewSizePercent=45 -XX:-OmitStackTraceInFastThrow \
                          -Djava.security.egd=file:/dev/./urandom \
+                         --enable-preview --enable-native-access=ALL-UNNAMED \
                          --add-opens java.base/java.lang=ALL-UNNAMED \
                          ${MAILBOXD_JAVA_OPTS} -Djava.io.tmpdir=/opt/zextras/mailboxd/work \
-                         -Djava.library.path=/opt/zextras/lib \
                          -Dzimbra.config=/localconfig/localconfig.xml \
-                         -Dzimbra.native.required=false \
                          -Dlog4j.configurationFile=/opt/zextras/conf/log4j.properties \
                          -cp /opt/zextras/mailbox/jars/mailbox.jar:/opt/zextras/mailbox/jars/*"
 
